# ALPHVDR

./: Cargo.toml  README.md  build.rs  install.sh
dashboard/: dashboard.py  index.html
docs/: CURRENT_STATUS.md  EDR_ARCHITECTURE_PLAN.md  FULL_DOCUMENTATION.md  MEMORY_CARVING_ARCHITECTURE.md
misp/: docker-compose.yml
scripts/: toggle_dev_mode.sh
src/: kp14_suite.rs  main.rs  memory_carver.rs  misp.rs  proxmox_bridge.rs  qihse.rs  rollback.rs  yara.rs
src-bpf/: common.h  sensor.bpf.c  vmlinux.h
systemd/: alphvdr.service
tests/: red_team_simulator.sh
